--- a/ltsh-chat-web-demo/src/main/resources/templates/index.html
+++ b/ltsh-chat-web-demo/src/main/resources/templates/index.html
@@ -11,7 +11,7 @@
 <body>
 <div><h3>龙腾四海首页</h3> </div>
 <div><a href="/chat/demo/chatView.html" >聊天demo</a></div>
-
+<div><a href="/chat/demo/loginView.html" >登录demo</a></div>
 </body>
 
 </html>
